--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/shortid": "^0.0.29",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "@typegoose/typegoose": "^9.10.1",
+    "@types/mongoose": "^5.11.97",
+    "express": "^4.18.1",
+    "mongoose": "^6.4.4",
+    "shortid": "^2.2.16"
   }
 }
